<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10sp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="27sp"
            android:paddingTop="15sp"
            android:paddingRight="27sp"
            android:paddingBottom="15sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/temp_item_order_payment_order_id"
                android:layout_marginBottom="10sp"/>

            <RelativeLayout
                android:id="@+id/RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="75sp"
                    android:layout_height="75sp"
                    app:cardCornerRadius="6dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/black" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="86dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_item_order_payment_title"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temp_item_order_payment_room"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/temp_item_order_payment_quantity"
                            android:textSize="12sp" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/RelativeLayout">

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="210sp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/temp_item_order_payment_check_in" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textSize="12sp"
                            android:text="@string/temp_item_order_payment_04_juli_2021" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2sp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/temp_item_order_payment_check_out" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:textSize="12sp"
                            android:text="@string/temp_item_order_payment_05_juli_2021" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/temp_item_order_payment_total_price" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_item_order_payment_800_000"
                        android:textColor="#FF9A05"
                        android:textSize="16sp"
                        android:gravity="end"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="27sp"
            android:paddingTop="15sp"
            android:paddingRight="27sp"
            android:paddingBottom="15sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/temp_item_order_payment_payment_method"
                android:paddingBottom="12sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/temp_item_order_payment_bank_bca"/>

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@mipmap/ic_bca_logo_foreground"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_item_order_payment_virtual_number_number"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#0496FF"
                    android:text="@string/temp_item_order_payment_number" />

                <TextView
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF9A05"
                    android:text="@string/temp_item_order_payment_copy"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/temp_item_order_payment_check_payment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_item_order_payment_finish_payment"/>

            <Button
                android:id="@+id/continue_to_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_item_order_payment_return_to_home"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temp_item_order_payment_by_using_our_services_you_have_agreed_to_explorr_s_terms_and_conditions_and_privacy_policy"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>