<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175sp"
    android:layout_gravity="center"
    app:cardCornerRadius="10sp"
    app:cardElevation="5sp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="175sp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:src="@color/black"
            tools:ignore="ContentDescription"
            android:background="@drawable/round_item_card_hotel"/>

        <LinearLayout
            android:layout_width="215sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            android:paddingTop="5sp"
            android:paddingBottom="5sp">

            <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/temp_item_card_hotel_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_covid_protect"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="2sp"
                    android:textSize="12sp"
                    android:text="@string/temp_card_hotel_covid_19_protection"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items_temp_card_hotel_average_review"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textColor="#0496FF"
                    tools:ignore="SmallSp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8sp"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:text="@string/temp_item_card_hotel_total_reviews"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textSize="10sp"
                android:text="@string/temp_item_card_hotel_hashtag"
                tools:ignore="SmallSp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/temp_item_hotel_start_from"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_marginBottom="10sp"
                    android:layout_alignParentLeft="true"
                    tools:ignore="SmallSp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_item_card_hotel_price"
                        android:textSize="19sp"
                        android:layout_gravity="right"
                        android:textStyle="bold"
                        android:textColor="#FF9A05"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:layout_gravity="right"
                        android:text="@string/temp_items_card_hotel_night_room"
                        tools:ignore="SmallSp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>